force-app/main/default/objects/EnableValidationRule__c/EnableValidationRule__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Profile Override Validation Rule</description>
    <label>Enable Validation Rule</label>
</CustomObject>