force-app/main/default/objects/EnableValidationRule__c/fields/EnableVR_to_prevent_DO_Users_from_Editin__c.field-meta.xml
<CustomField>
    <fullName>EnableVR_to_prevent_DO_Users_from_Editin__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EnableVR to prevent DO Users from Editin</label>
    <type>Checkbox</type>
</CustomField>