force-app/main/default/objects/EnableValidationRule__c/fields/Flag_To_Prevent_ABN_VR_Fired__c.field-meta.xml
<CustomField>
    <fullName>Flag_To_Prevent_ABN_VR_Fired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag To Prevent ABN VR Fired</label>
    <type>Checkbox</type>
</CustomField>