force-app/main/default/objects/EnableValidationRule__c/fields/Flag_to_Prevent_Agency_Acc_Reactivate__c.field-meta.xml
<CustomField>
    <fullName>Flag_to_Prevent_Agency_Acc_Reactivate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag to Prevent Agency Acc Reactivate</label>
    <type>Checkbox</type>
</CustomField>