force-app/main/default/objects/EnableValidationRule__c/fields/Flag_to_Prevent_editing_QAC_Paid_ServPay__c.field-meta.xml
<CustomField>
    <fullName>Flag_to_Prevent_editing_QAC_Paid_ServPay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag to Prevent editing QAC Paid ServPay</label>
    <type>Checkbox</type>
</CustomField>