force-app/main/default/objects/EnableValidationRule__c/fields/Flag_To_Prevent_SR_Hierarchy_Type__c.field-meta.xml
<CustomField>
    <fullName>Flag_To_Prevent_SR_Hierarchy_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag To Prevent SR Hierarchy Type</label>
    <type>Checkbox</type>
</CustomField>