force-app/main/default/objects/EnableValidationRule__c/fields/Freight_Query_Case_New_Account__c.field-meta.xml
<CustomField>
    <fullName>Freight_Query_Case_New_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Freight_Query_Case_New_Account	to exclude Data Admin Profie.</description>
    <label>Freight_Query_Case_New_Account</label>
    <type>Checkbox</type>
</CustomField>