force-app/main/default/objects/EnableValidationRule__c/fields/Freight_Team_Leads__c.field-meta.xml
<CustomField>
    <fullName>Freight_Team_Leads__c</fullName>
    <description>Freight Team Leads</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Freight Team Leads</label>
    <type>TextArea</type>
</CustomField>