force-app/main/default/objects/EnableValidationRule__c/fields/Prevent_editing_QAC_Service_Fee_for_Paid__c.field-meta.xml
<CustomField>
    <fullName>Prevent_editing_QAC_Service_Fee_for_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent editing QAC Service Fee for Paid</label>
    <type>Checkbox</type>
</CustomField>