force-app/main/default/objects/EnableValidationRule__c/fields/Prevent_Owner_Change_to_WaitingforQueues__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Owner_Change_to_WaitingforQueues__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Prevent_Owner_Change_to_WaitingforQueues</label>
    <type>Checkbox</type>
</CustomField>