force-app/main/default/objects/EnableValidationRule__c/fields/Prevent_QAC_Case_Close_VR_Fired__c.field-meta.xml
<CustomField>
    <fullName>Prevent_QAC_Case_Close_VR_Fired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent QAC Case Close VR Fired</label>
    <type>Checkbox</type>
</CustomField>