force-app/main/default/objects/EnableValidationRule__c/fields/PreventAttachmentDelete__c.field-meta.xml
<CustomField>
    <fullName>PreventAttachmentDelete__c</fullName>
    <defaultValue>true</defaultValue>
    <description>QCC: Used in Attachment Trigger Helper, Block user from deleting the attachment.</description>
    <label>PreventAttachmentDelete</label>
    <type>Checkbox</type>
</CustomField>