force-app/main/default/objects/EnableValidationRule__c/fields/QCC_Checkon_Preferred_Contact_method__c.field-meta.xml
<CustomField>
    <fullName>QCC_Checkon_Preferred_Contact_method__c</fullName>
    <defaultValue>true</defaultValue>
    <label>QCC_Checkon_Preferred_Contact_method</label>
    <type>Checkbox</type>
</CustomField>