force-app/main/default/objects/EnableValidationRule__c/fields/Restrict_Account_Classification_Access__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Account_Classification_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restrict_Account_Classification_Access</description>
    <label>Restrict_Account_Classification_Access</label>
    <type>Checkbox</type>
</CustomField>