force-app/main/default/objects/EnableValidationRule__c/fields/Validate_Email_Or_Phone_Or_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Validate_Email_Or_Phone_Or_Mobile__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Validate_Email_Or_Phone_Or_Mobile</label>
    <type>Checkbox</type>
</CustomField>