force-app/main/default/objects/EnableValidationRule__c/fields/VR_Approve_Mandatory_for_closed_cases_SR__c.field-meta.xml
<CustomField>
    <fullName>VR_Approve_Mandatory_for_closed_cases_SR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VR_Approve_Mandatory_for_closed_cases_SR</label>
    <type>Checkbox</type>
</CustomField>