force-app/main/default/objects/EnableValidationRule__c/fields/VR_AU_Ownership_Changes_Restriction__c.field-meta.xml
<CustomField>
    <fullName>VR_AU_Ownership_Changes_Restriction__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This custom setting is created to Exempt Users(Craig Young,Rory Gilmartin) from changing the Account ownership</description>
    <label>VR_AU_Ownership_Changes_Restriction</label>
    <type>Checkbox</type>
</CustomField>