force-app/main/default/objects/EnableValidationRule__c/fields/VR_BypassOTSCaseStatusErrors__c.field-meta.xml
<CustomField>
    <fullName>VR_BypassOTSCaseStatusErrors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in CaseStatusUpdateHandler</description>
    <label>VR_BypassOTSCaseStatusErrors</label>
    <type>Checkbox</type>
</CustomField>