force-app/main/default/objects/EnableValidationRule__c/fields/VR_Credit_Card_Refund_Required_Fields__c.field-meta.xml
<CustomField>
    <fullName>VR_Credit_Card_Refund_Required_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>VR_Credit_Card_Refund_Required_Fields</description>
    <label>VR_Credit_Card_Refund_Required_Fields</label>
    <type>Checkbox</type>
</CustomField>