force-app/main/default/objects/EnableValidationRule__c/fields/VR_Description_field_is_locked_QCC__c.field-meta.xml
<CustomField>
    <fullName>VR_Description_field_is_locked_QCC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Description field is locked for QCC users after case creation</description>
    <label>VR_Description_field_is_locked_QCC</label>
    <type>Checkbox</type>
</CustomField>