force-app/main/default/objects/EnableValidationRule__c/fields/VR_Dollar_Value_Must_Be_Populated__c.field-meta.xml
<CustomField>
    <fullName>VR_Dollar_Value_Must_Be_Populated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>VR_Dollar_Value_Must_Be_Populated</description>
    <label>VR_Dollar_Value_Must_Be_Populated</label>
    <type>Checkbox</type>
</CustomField>