force-app/main/default/objects/EnableValidationRule__c/fields/VR_Donot_change_Recovery_Status__c.field-meta.xml
<CustomField>
    <fullName>VR_Donot_change_Recovery_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>VR_Donot_change_Recovery_Status</description>
    <label>VR_Donot_change_Recovery_Status</label>
    <type>Checkbox</type>
</CustomField>