force-app/main/default/objects/EnableValidationRule__c/fields/VR_EFT_Refund_Required_Fields__c.field-meta.xml
<CustomField>
    <fullName>VR_EFT_Refund_Required_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for required fields for EFT refunds</description>
    <label>VR_EFT_Refund_Required_Fields</label>
    <type>Checkbox</type>
</CustomField>