force-app/main/default/objects/EnableValidationRule__c/fields/VR_FltEvtEditingOnceLinkedtoGE__c.field-meta.xml
<CustomField>
    <fullName>VR_FltEvtEditingOnceLinkedtoGE__c</fullName>
    <defaultValue>true</defaultValue>
    <description>QCC: For QCC_PreventFltEvtEditingOnceLinkedtoGE Validation in Flight Events Object</description>
    <label>VR_FltEvtEditingOnceLinkedtoGE</label>
    <type>Checkbox</type>
</CustomField>