force-app/main/default/objects/EnableValidationRule__c/fields/VR_Freight_Owner_Changes_Restriction__c.field-meta.xml
<CustomField>
    <fullName>VR_Freight_Owner_Changes_Restriction__c</fullName>
    <defaultValue>true</defaultValue>
    <description>VR Freight Owner Changes Restriction</description>
    <label>VR Freight Owner Changes Restriction</label>
    <type>Checkbox</type>
</CustomField>