force-app/main/default/objects/EnableValidationRule__c/fields/VR_Mandatory_Network_filed__c.field-meta.xml
<CustomField>
    <fullName>VR_Mandatory_Network_filed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VR_Mandatory_Network_filed</label>
    <type>Checkbox</type>
</CustomField>