force-app/main/default/objects/EnableValidationRule__c/fields/VR_MandatoryCheck_BefActivation_CorpSch__c.field-meta.xml
<CustomField>
    <fullName>VR_MandatoryCheck_BefActivation_CorpSch__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Asset VR</description>
    <label>VR_MandatoryCheck_BefActivation_CorpSch</label>
    <type>Checkbox</type>
</CustomField>