force-app/main/default/objects/EnableValidationRule__c/fields/VR_manual_creation_alternate_preferred__c.field-meta.xml
<CustomField>
    <fullName>VR_manual_creation_alternate_preferred__c</fullName>
    <defaultValue>true</defaultValue>
    <description>QCC: Used to ensure the Preferred Contact Method when manually creating a contact is &apos;Alternate&apos;</description>
    <label>VR_manual_creation_alternate_preferred</label>
    <type>Checkbox</type>
</CustomField>