force-app/main/default/objects/EnableValidationRule__c/fields/VR_PreventCJMUpdatingAssignedEvent__c.field-meta.xml
<CustomField>
    <fullName>VR_PreventCJMUpdatingAssignedEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: Prevent CJM Updating Assigned Event.</description>
    <label>VR_PreventCJMUpdatingAssignedEvent</label>
    <type>Checkbox</type>
</CustomField>