force-app/main/default/objects/EnableValidationRule__c/fields/VR_QAC_Contact_Verification_Num_Length__c.field-meta.xml
<CustomField>
    <fullName>VR_QAC_Contact_Verification_Num_Length__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VR QAC Contact Verification Num Length</label>
    <type>Checkbox</type>
</CustomField>