force-app/main/default/objects/EnableValidationRule__c/fields/VR_QAC_Mandate_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>VR_QAC_Mandate_Service_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Service Fee for the AU Consultants is mandatory (Exclude Sys Admin)</description>
    <label>VR_QAC Mandate Service Fee</label>
    <type>Checkbox</type>
</CustomField>