force-app/main/default/objects/EnableValidationRule__c/fields/VR_QCC_Cannot_edit_cases_not_owned_by_us__c.field-meta.xml
<CustomField>
    <fullName>VR_QCC_Cannot_edit_cases_not_owned_by_us__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC - Unable to edit cases that are not owned by the current user</description>
    <label>VR_QCC_Cannot_edit_cases_not_owned_by_us</label>
    <type>Checkbox</type>
</CustomField>