force-app/main/default/objects/EnableValidationRule__c/fields/VR_QCC_CannotManuallyAssignToCCC__c.field-meta.xml
<CustomField>
    <fullName>VR_QCC_CannotManuallyAssignToCCC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC - Validation rule to restrict CJM from manually assigning to CCC without clicking the assign button</description>
    <label>VR_QCC_CannotManuallyAssignToCCC</label>
    <type>Checkbox</type>
</CustomField>