force-app/main/default/objects/EnableValidationRule__c/fields/VR_QCC_Event_FailureCode__c.field-meta.xml
<CustomField>
    <fullName>VR_QCC_Event_FailureCode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: At least 1 Failure Code must be specified when saving an Event</description>
    <label>VR_QCC_Event_FailureCode</label>
    <type>Checkbox</type>
</CustomField>