force-app/main/default/objects/EnableValidationRule__c/fields/VR_QCC_LockRecoveryOnCaseClosed__c.field-meta.xml
<CustomField>
    <fullName>VR_QCC_LockRecoveryOnCaseClosed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>QCC: Recovery Validation QCC_LockRecoveryOnCaseClosed</description>
    <label>VR_QCC_LockRecoveryOnCaseClosed</label>
    <type>Checkbox</type>
</CustomField>