force-app/main/default/objects/EnableValidationRule__c/fields/VR_QCC_PreventChangingEscalationToFalse__c.field-meta.xml
<CustomField>
    <fullName>VR_QCC_PreventChangingEscalationToFalse__c</fullName>
    <defaultValue>true</defaultValue>
    <description>for Validation rule QCC_PreventChangingEscalationToFalse</description>
    <label>VR_QCC_PreventChangingEscalationToFalse</label>
    <type>Checkbox</type>
</CustomField>