force-app/main/default/objects/EnableValidationRule__c/fields/VR_QCC_PrimaryRootCauseNonEditable__c.field-meta.xml
<CustomField>
    <fullName>VR_QCC_PrimaryRootCauseNonEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VR_QCC_PrimaryRootCauseNonEditable</label>
    <type>Checkbox</type>
</CustomField>