force-app/main/default/objects/EnableValidationRule__c/fields/VR_QCC_Resolution_Method_Required__c.field-meta.xml
<CustomField>
    <fullName>VR_QCC_Resolution_Method_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>VR_QCC_Resolution_Method_Required</description>
    <label>VR_QCC_Resolution_Method_Required</label>
    <type>Checkbox</type>
</CustomField>