force-app/main/default/objects/EnableValidationRule__c/fields/VR_QCC_UnableToUpdateOwnerWhenClosed__c.field-meta.xml
<CustomField>
    <fullName>VR_QCC_UnableToUpdateOwnerWhenClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: Stopping users from updating the owner field when an event is closed</description>
    <label>VR_QCC_UnableToUpdateOwnerWhenClosed</label>
    <type>Checkbox</type>
</CustomField>