force-app/main/default/objects/EnableValidationRule__c/fields/VR_Quantity_field_entered_incorrectlyQCC__c.field-meta.xml
<CustomField>
    <fullName>VR_Quantity_field_entered_incorrectlyQCC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>VR_Quantity_field_entered_incorrectlyQCC</description>
    <label>VR_Quantity_field_entered_incorrectlyQCC</label>
    <type>Checkbox</type>
</CustomField>