force-app/main/default/objects/EnableValidationRule__c/fields/VR_Received_Date_Cannot_Change__c.field-meta.xml
<CustomField>
    <fullName>VR_Received_Date_Cannot_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once received date has been set, it cannot be changed</description>
    <label>VR_Received_Date_Cannot_Change</label>
    <type>Checkbox</type>
</CustomField>