force-app/main/default/objects/EnableValidationRule__c/fields/VR_Restrict_Modifying_Name__c.field-meta.xml
<CustomField>
    <fullName>VR_Restrict_Modifying_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contract__c[Contract &amp; Agreement]</description>
    <label>VR_Restrict_Modifying_Name</label>
    <type>Checkbox</type>
</CustomField>