force-app/main/default/objects/EnableValidationRule__c/fields/VR_Ticketed_by_Relationship_Check__c.field-meta.xml
<CustomField>
    <fullName>VR_Ticketed_by_Relationship_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restrict the users creating the Ticked by relationship records except the below users. CRM-3934.
1) Kellie Sullivan
2) Nadine FernandesMoniz
3) Mary Elek
4) Allan Aguilar
5) Kevin Burke
6) Gavin Fahey</description>
    <label>VR_Ticketed_by_Relationship_Check</label>
    <type>Checkbox</type>
</CustomField>