force-app/main/default/objects/EnableValidationRule__c/fields/VR_To_Check_If_Status_Not_RevretedBack__c.field-meta.xml
<CustomField>
    <fullName>VR_To_Check_If_Status_Not_RevretedBack__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Asset VR</description>
    <label>VR_To_Check_If_Status_Not_RevretedBack</label>
    <type>Checkbox</type>
</CustomField>