force-app/main/default/objects/EnableValidationRule__c/fields/VR_To_Check_PubSch_EndDT_Lessthan_StarDT__c.field-meta.xml
<CustomField>
    <fullName>VR_To_Check_PubSch_EndDT_Lessthan_StarDT__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Loyalty Validation VR_To_Check_PubSch_EndDT_Lessthan_StarDT</description>
    <label>VR_To_Check_PubSch_EndDT_Lessthan_StarDT</label>
    <type>Checkbox</type>
</CustomField>