force-app/main/default/objects/EnableValidationRule__c/fields/VR_To_Check_SchemeCostCenter_CorpScheme__c.field-meta.xml
<CustomField>
    <fullName>VR_To_Check_SchemeCostCenter_CorpScheme__c</fullName>
    <defaultValue>true</defaultValue>
    <label>VR_To_Check_SchemeCostCenter_CorpScheme</label>
    <type>Checkbox</type>
</CustomField>