force-app/main/default/objects/EnableValidationRule__c/fields/VR_To_Check_SchemeCostCenter_OnConversio__c.field-meta.xml
<CustomField>
    <fullName>VR_To_Check_SchemeCostCenter_OnConversio__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Vaidation Rule VR_To_Check_SchemeCostCenter_OnConversio</description>
    <label>VR_To_Check_SchemeCostCenter_OnConversio</label>
    <type>Checkbox</type>
</CustomField>