force-app/main/default/objects/EnableValidationRule__c/fields/VR_To_enforce_the_No_Second_Active_AMEX__c.field-meta.xml
<CustomField>
    <fullName>VR_To_enforce_the_No_Second_Active_AMEX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To avoid VR_To_enforce_the_No_Second_Active_AMEX Validation Rule in Product Registration set this to True</description>
    <label>VR_To_enforce_the_No_Second_Active_AMEX</label>
    <type>Checkbox</type>
</CustomField>