force-app/main/default/objects/EnableValidationRule__c/fields/VR_To_Prevent_Editing_AMEX_Product_In_UI__c.field-meta.xml
<CustomField>
    <fullName>VR_To_Prevent_Editing_AMEX_Product_In_UI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To avoid VR_To_Prevent_Editing_AMEX_Product_In_UI validation Rule in product Registration set this to True</description>
    <label>VR_To_Prevent_Editing_AMEX_Product_In_UI</label>
    <type>Checkbox</type>
</CustomField>