force-app/main/default/objects/EnableValidationRule__c/fields/VR_To_Prevent_Editing_VerifiedCustomer__c.field-meta.xml
<CustomField>
    <fullName>VR_To_Prevent_Editing_VerifiedCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VR_To_Prevent_Editing_VerifiedCustomer</label>
    <type>Checkbox</type>
</CustomField>