force-app/main/default/objects/EnableValidationRule__c/fields/VR_To_Prevent_Inactivate_Corp_Scheme__c.field-meta.xml
<CustomField>
    <fullName>VR_To_Prevent_Inactivate_Corp_Scheme__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Loyalty Validation VR_To_Prevent_Inactivate_Corp_Scheme</description>
    <label>VR_To_Prevent_Inactivate_Corp_Scheme</label>
    <type>Checkbox</type>
</CustomField>