force-app/main/default/objects/EnableValidationRule__c/fields/VR_To_Prevent_Past_StartDate_On_Pub_SCH__c.field-meta.xml
<CustomField>
    <fullName>VR_To_Prevent_Past_StartDate_On_Pub_SCH__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Asset VR</description>
    <label>VR_To_Prevent_Past_StartDate_On_Pub_SCH</label>
    <type>Checkbox</type>
</CustomField>