force-app/main/default/objects/EnableValidationRule__c/fields/VR_To_Prevent_SchType_Change_from_Retail__c.field-meta.xml
<CustomField>
    <fullName>VR_To_Prevent_SchType_Change_from_Retail__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Loyalty Validation VR_To_Prevent_SchType_Change_from_Retail</description>
    <label>VR_To_Prevent_SchType_Change_from_Retail</label>
    <type>Checkbox</type>
</CustomField>