force-app/main/default/objects/EnableValidationRule__c/fields/VR_to_Prevent_Setting_Status_to_Active__c.field-meta.xml
<CustomField>
    <fullName>VR_to_Prevent_Setting_Status_to_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Asset VR</description>
    <label>VR_to_Prevent_Setting_Status_to_Active</label>
    <type>Checkbox</type>
</CustomField>