force-app/main/default/objects/EnableValidationRule__c/fields/VR_To_Prevent_Updating_Inactive_Asset__c.field-meta.xml
<CustomField>
    <fullName>VR_To_Prevent_Updating_Inactive_Asset__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Asset VR</description>
    <label>VR_To_Prevent_Updating_Inactive_Asset</label>
    <type>Checkbox</type>
</CustomField>