force-app/main/default/objects/EnableValidationRule__c/fields/VR_To_prevent_WEndDT_Lowerthan_SchEndDT__c.field-meta.xml
<CustomField>
    <fullName>VR_To_prevent_WEndDT_Lowerthan_SchEndDT__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Asset VR</description>
    <label>VR_To_prevent_WEndDT_Lowerthan_SchEndDT</label>
    <type>Checkbox</type>
</CustomField>