force-app/main/default/objects/EnableValidationRule__c/fields/VR_Validate_QBR_Case__c.field-meta.xml
<CustomField>
    <fullName>VR_Validate_QBR_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VR Validate_QBR_Case</label>
    <type>Checkbox</type>
</CustomField>