force-app/main/default/objects/EnableValidationRule__c/fields/VR_Value_field_entered_incorrectly_QCC__c.field-meta.xml
<CustomField>
    <fullName>VR_Value_field_entered_incorrectly_QCC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>VR_Value_field_entered_incorrectly_QCC</description>
    <label>VR_Value_field_entered_incorrectly_QCC</label>
    <type>Checkbox</type>
</CustomField>